[b]Version 0.6.0rc4[/b] (not released yet):

(2008-03-29)
 * Fix: DVDs started to play at chapter #2 if using mplayer 1.0rc2 or older.


[b]Version 0.6.0rc3[/b]:

(2008-03-21)
 * Try to use xv (or directx in windows) if the video driver is not set.
 * Added Play->Jump to, which will show a dialog where you can enter the
   position (time) to jump.

(2008-03-20)
 * Fix: selection of chapters should work again with newer versions of mplayer.
 * Removed the option "Fast seek to chapters in dvds" in 
   Preferences->Performance. Now it will use the fast method if not using
   a cache, and the slow one otherwise (the latter won't even work in newer 
   versions of mplayer, so it's recommended not to use a cache for dvds).
 * Added rm and swf to the list of extensions.

(2008-03-17)
 * Added new menu Video->Rotate, with options to rotate the image.
 * Show the language -if available- along with the name in the audio menu
   (it may work too in the title menu).

(2008-03-14)
 * Now a dialog appears too if mplayer fails to start or crashes.
 * Add the scale filter if using the soft equalizer and gl/gl2, to avoid
   mplayer to complain.
 * The subtitle actions are enabled now if the close caption option is checked.

(2008-03-13)
 * Added a new dialog to report the mplayer errors.

(2008-03-11)
 * Displays a warning dialog if mplayer exits with an exit code 
   different to 0. 

(2008-03-10)
 * (Internal change) Use -monitorpixelaspect instead of -monitoraspect.

(2008-03-08)
 * Use -colorkey for directx only.

(2008-03-06)
 * Added more help for the subtitle, interface and advanced sections in 
   preferences.

(2008-03-05)
 * Ignore action restore/hide if system tray icon is not visible. Fixes
   bug #1908229.
 * Added option in config.h to disable the use of the colorkey.

(2008-03-03)
 * Now the shortcut editor should recognize some of the multimedia keys.
 * (By user request) Added an action to reset the video equalizer.